...
    <string name="join_room"></string>
    <string name="username"></string>
    <string name="logout"></string>
    <string name="search"></string>
    <string name="option_send_files"></string>
    <string name="call_ended"></string>
    <string name="_continue"></string>
    <string name="action_join"></string>
    <string name="action_reject"></string>
    <string name="room_participants_leave_prompt_title"></string>
    <string name="room_participants_leave_prompt_msg">？</string>
    <string name="room_one_user_is_typing">%s …</string>
    <string name="title_activity_settings"></string>
...
    <string name="settings_logged_in"></string>
    <string name="account_email_validation_message">。。</string>
    <string name="account_email_already_used_error">。</string>
    <string name="account_phone_number_already_used_error">。</string>
    <string name="room_settings_set_main_address"></string>
    <string name="room_settings_unset_main_address"></string>
    <string name="ok"></string>
    <string name="send_bug_report_alert_message">。？</string>
    <string name="ssl_unexpected_existing_expl">。<b></b>！<b></b>。</string>
    <string name="ssl_expected_existing_expl">。，。</string>
    <string name="ssl_only_accept">。</string>
    <string name="settings_profile_picture"></string>
    <string name="settings_third_party_notices"></string>
...
    <string name="settings_troubleshoot_test_bg_restricted_quickfix"></string>
    <string name="settings_troubleshoot_test_battery_success">${app_name} 。</string>
    <string name="settings_troubleshoot_test_battery_failed">，（Doze）。、、。</string>
    <string name="settings_troubleshoot_test_battery_quickfix"></string>
    <string name="encryption_export_notice">。，。</string>
    <string name="passphrase_create_passphrase"></string>
    <string name="passphrase_passphrase_does_not_match"></string>
    <string name="command_problem_with_parameters"> %s ，。</string>
    <string name="no_valid_google_play_services_apk"> Google Play Services APK。。</string>
    <string name="title_activity_keys_backup_setup"></string>
    <string name="title_activity_keys_backup_restore"></string>
    <string name="sign_out_bottom_sheet_warning_no_backup">，</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">。。</string>
...
    <string name="verify_cancelled_notice">。 。</string>
    <string name="verification_cancelled"></string>
    <string name="recovery_passphrase"></string>
    <string name="message_key"></string>
    <string name="enter_account_password"> %s 。</string>
    <string name="bootstrap_dont_reuse_pwd">。</string>
    <string name="bootstrap_info_text_2">，。</string>
    <string name="bootstrap_loading_text">，。</string>
    <string name="bootstrap_loading_title">。</string>
    <string name="bootstrap_finish_title">！</string>
    <string name="keep_it_safe"></string>
    <string name="finish"></string>
    <string name="bootstrap_crosssigning_progress_initializing"></string>
...
    <string name="bottom_sheet_setup_secure_backup_submit"></string>
    <string name="bottom_sheet_setup_secure_backup_security_key_title"></string>
    <string name="bottom_sheet_setup_secure_backup_security_key_subtitle">。</string>
    <string name="bottom_sheet_setup_secure_backup_security_phrase_title"></string>
    <string name="bottom_sheet_setup_secure_backup_security_phrase_subtitle">，。</string>
    <string name="bottom_sheet_save_your_recovery_key_title"></string>
    <string name="bottom_sheet_save_your_recovery_key_content">，。</string>
    <string name="set_a_security_phrase_title"></string>
    <string name="set_a_security_phrase_notice">，。</string>
    <string name="set_a_security_phrase_hint"></string>
    <string name="set_a_security_phrase_again_notice">。</string>
    <string name="room_settings_name_hint"></string>
    <string name="room_settings_topic_hint"></string>
...
