...
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@id/homeKeysBackupBanner"
        app:shapeAppearanceOverlay="@style/ImageView_Corner"
        app:srcCompat="@color/white" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/roomListContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@id/homeKeysBackupBanner" />

    <!--    bottom_navigation_icon_tint_selector_cus.xml-->
...
